Bug 122219 - CRASH: closing Base while XML filter settings dialog is open
Summary: CRASH: closing Base while XML filter settings dialog is open
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Database-Forms
  Show dependency treegraph
 
Reported: 2018-12-20 10:42 UTC by Xisco Faulí
Modified: 2019-01-07 15:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-12-20 10:42:23 UTC
Steps to reproduce:
1. Open attachment 147617 [details]
2. Edit the form
3. Tools - XML filter settings
4. Click on New or Edit <- This step is important to reproduce the crash
5. Close Base

-> Crash!

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 1b7bcaa714f0af45c6a9660d1f0940cb7931ba0f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2018-12-20 10:44:10 UTC
Regression introduced by:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/422b12bc13b34f4e99f79b2571b89296873ebe89%5E%21

commit 422b12bc13b34f4e99f79b2571b89296873ebe89	[log]
author	Caolán McNamara <caolanm@redhat.com>	Wed Dec 19 11:03:44 2018 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Wed Dec 19 15:16:28 2018 +0100
tree 0d285947e833149b353171203f2ae6fbe1c95c5f
parent b16992f92090f616af02ea46912ebde697c7780d [diff]

tdf#122171 block closing final window while xslt filter dialog is modal

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 2 Roman Kuznetsov 2018-12-20 14:11:04 UTC
don't repro in

Version: 6.3.0.0.alpha0+
Build ID: 2b9739b9b009de93efa4f24995469c3bb9d82261
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-18_23:09:56
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

only Linux?
Comment 3 Caolán McNamara 2018-12-20 14:43:17 UTC
looks like that writer-as-base-form window is not handled like a normal writer window, but as some embedding thing which doesn't work well with the CloseVeto, which is probably another underlying bug. I think I'll hit this with a different hammer.
Comment 4 Commit Notification 2018-12-20 21:14:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ec61f9c97f13236cbcead7ce2d75e0122abe7969%5E%21

Resolves: tdf#122219 base form writer-window doesn't honour CloseVeto properly

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2018-12-20 21:24:20 UTC
backports of this alternative approach to 6-2 and 6-1 in gerrit
Comment 6 Xisco Faulí 2018-12-21 17:49:45 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 7d63c700c36afd27850346e42b92768f084f5d4d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded


@Caolán, Thanks for fixing this!!
Comment 7 Commit Notification 2019-01-07 15:53:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/df41e426ca6aa5693abb5417b1c7ab8f77381e9e%5E%21

Resolves: tdf#122219 base form writer-window doesn't honour CloseVeto properly

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.