Resolves: tdf#122219 base form writer-window doesn't honour CloseVeto properly

just hit this with the same all-modal hammer we now use in the extension manager,
a modeless dialog, with modal subdialogs run by a normal non-async subloop, turns
into a modal dialog for all other toplevels

Change-Id: Ia35fad7a1be2ec493011c7e4354b70231b78a7fc